--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="col-sm-2">
 
                 <!-- Play Button -->
-                <a id="journal" href="#" class="btn video-icon">
+                <a id="journal" href="http://www.github.com/helenmhe" class="btn video-icon">
                     <i class="ion-ios-play-outline"></i>
                 </a>
 
@@ -164,7 +164,7 @@
 
                 <!-- video-right -->
                 <div class="video-right">
-                    A journal of summer 2017 <br>recorded in sketches
+                    Check out some odds <br>and ends on GitHub
                 </div>
 
             </div><!-- col-sm-4 -->
@@ -190,7 +190,7 @@
                     <a href="#"
                        data-largesrc="assets/images/portfolio/mural.jpg"
                        data-title="Stop and Smell the Roses"
-                       data-description="Mural painted in the MIT tunnels for the Border Lines project"
+                       data-description="AR augmented mural painted in the MIT tunnels for the <a href=https://theborderlinetunnel.wordpress.com/2017/05/21/stop-and-smell-the-roses>Border Line project</a>"
                        style="background-image:url(assets/images/portfolio/thumbs/1.jpg)">
                     </a>
                 </li>
@@ -313,7 +313,7 @@
                         </div>
                         <div class="about-service">
                             <h4 class="text-center">Software</h4>
-                            <p class="text-center">Praesent dapibus eleifend aug eget sollicitudin velit malesuada Aliquam blandit diam feugiat ex eget sollicitudin eget.</p>
+                            <p class="text-center">I'm primarily a Python programmer, but I'm comfortable with Java and C/C++. I also have extensive experience with Git and command line, and have worked a lot with NumPy for machine learning applications.</p>
                         </div>
                     </div>
 
@@ -329,7 +329,7 @@
                         <div class="about-service">
                             <h4 class="text-center">Web Development</h4>
                             <p class="text-center">
-                                Praesent dapibus eleifend aug eget sollicitudin velit malesuada Aliquam blandit diam feugiat ex eget sollicitudin eget.
+                                I've worked on many projects with Django backends, like <a href="http://wikum.csail.mit.edu/">Wikum</a> and the <a href="http://rmg.mit.edu/">Reaction Mechanism Generator</a>. I'm also great with Javascript! For front-end, I've used a lot of Angular and pure HTML/CSS (like this website).
                             </p>
                         </div>
                     </div>
@@ -346,7 +346,7 @@
                         <div class="about-service">
                             <h4 class="text-center">Visual Arts</h4>
                             <p class="text-center">
-                                Praesent dapibus eleifend aug eget sollicitudin velit malesuada Aliquam blandit diam feugiat ex eget sollicitudin eget.
+                                I'm a self-taught artist who usually works in Adobe Photoshop. I'm also proficient in Adobe Illustrator, Autodesk Maya, and traditional media like graphite, ink, and paints.
                             </p>
                         </div>
                     </div>
@@ -359,6 +359,7 @@
 <!-- Service -->
 <!-- Expertise -->
 <section id="expertise" class="section dark-bg expertise progressbars">
+    <div class="color-overlay"></div>
     <div class="color-overlay"></div>
     <div class="container">
         <header class="section-heading">
@@ -385,8 +386,7 @@
                                     <i class="ion-social-python" style="font-size:5em"></i>
                                 </div>
                                 <div class="tab-right">
-                                    <p>Donec ac consectetur neque, vel eleifend nisi. In et nibh at neque
-                                        convallis tincidunt modales odio vel malesuada interdum donec modales odio vel malesuada interdum donec ac consectetur modales odio vel malesuada interdum.</p>
+                                    <p>I've completed a number of projects in Python 2.7 and 3.6, in-class and out. I'm also a Lab Assistant for 6.009 Fundamentals of Programming, which means I teach students about efficiency and style in their Python coding.</p>
                                 </div>
                             </div>
 
@@ -419,7 +419,7 @@
                         <header class="progress-heading">
                             <div class="row">
                                 <div class="col-xs-6">Python</div>
-                                <div class="col-xs-6 text-right">90%</div>
+                                <div class="col-xs-6 text-right"> </div>
                             </div>
                         </header>
                         <div class="progress">
@@ -433,7 +433,7 @@
                         <header class="progress-heading">
                             <div class="row">
                                 <div class="col-xs-6">HTML/CSS</div>
-                                <div class="col-xs-6 text-right">70%</div>
+                                <div class="col-xs-6 text-right"> </div>
                             </div>
                         </header>
                         <div class="progress">
@@ -447,7 +447,7 @@
                         <header class="progress-heading">
                             <div class="row">
                                 <div class="col-xs-6">Android</div>
-                                <div class="col-xs-6 text-right">50%</div>
+                                <div class="col-xs-6 text-right"> </div>
                             </div>
                         </header>
                         <div class="progress">
