bucky and content changes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <div class="intro">
                 <h1>Helen Mei He</h1>
-                <p>Welcome to my website</p>
+                <p>Nice to meet you</p>
                 <a href="resume.pdf" download class="btn btn-default-o">Download Resume</a>
             </div><!-- /.intro -->
 
@@ -103,17 +103,17 @@
 
         <div class="section-content">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 extra-pad">
 
                     <!-- about-left -->
                     <div class="about-content left">
                         <h4>MIT Student</h4>
-                        <p>I study Computer Science at the Massachusetts Institute of Technology (MIT) with a humanities concentration in Economics. I also enjoy digital painting, mainly focusing in soft realism portraiture. Aside from art, I play violin and video games in my free time. On campus I'm involved in projects like The Borderline and organizations like Pi Beta Phi.</p>
+                        <p>I study Computer Science at the Massachusetts Institute of Technology (MIT) with a humanities concentration in Economics. I also enjoy digital painting, mainly focusing in soft realism portraiture. Aside from art, I play violin and video games in my free time.</p>
                     </div>
 
                 </div><!-- col-sm-4 -->
 
-                <div class="col-sm-4">
+                <div class="col-sm-4 extra-pad">
 
                     <!-- about-center -->
                     <figure class="about-content center">
@@ -127,7 +127,7 @@
                     <!-- about-right -->
                     <div class="about-content right">
                         <h4>Full stack dev</h4>
-                        <p>Lorem adipipsum dolor sit amet, consecteturno aisicing elit. Necessitatibus illo vel dolorumsa soluta consectetur doloribus sit. Delectus tenetur odit dicta vitae debitis  susc ipitaut voluptas quaerat dolorum.</p>
+                        <p>I'm a web developer comfortable with all parts of the stack, from databases and backend to UI design. Personally, I use MongoDB, PostgreSQL, Django, and AngularJS a lot.</p>
                     </div>
 
                 </div><!-- col-sm-4 -->
@@ -244,10 +244,10 @@
                 </li>
                 <li>
                     <a href="#"
-                       data-largesrc="assets/images/gallery/1.jpg"
+                       data-largesrc="assets/images/portfolio/plumboi.jpg"
                        data-title="Plum Boi"
                        data-description="Portrait of Bucky Barnes from Captain America: The Winter Soldier"
-                       style="background-image:url(assets/images/gallery/thumbs/1.jpg)">
+                       style="background-image:url(assets/images/portfolio/thumbs/8.jpg)">
                     </a>
                 </li> 
                 <li>
