--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/lib/ionicons/css/ionicons.css">
 
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:100,300,400">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:100,300,400">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro:200, 300, 400">
 
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/ie_fix.css">
@@ -71,11 +71,9 @@
 <header id="header" class="header-wrapper home-parallax home-fade dark-bg bg-02">
     <div class="color-overlay"></div>
     <div class="header-wrapper-inner">
-        <div class="container">
-
+        <div class="move-container container">
+            <div class="intro move-text"></div>
             <div class="intro">
-                <h1>Helen Mei He</h1>
-                <p>Nice to meet you</p>
                 <a href="resume.pdf" download class="btn btn-default-o">Download Resume</a>
             </div><!-- /.intro -->
 
@@ -91,7 +89,9 @@
 </header>
 <!-- /Header -->
 <!-- About Us -->
+
 <section id="about-us" class="section about-us">
+
     <div class="container">
 
         <!---->
